# graphsense-tagpack-tool

./: .coveragerc  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_tagpacks.md  data.txt  docker-compose.monitoring.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: docker-build.yaml  pypi-publish.yaml  release.yaml  test.yml  test_and_build.yaml
admin-ui/: .gitignore  README.md  elm-land.json  elm.json  package-lock.json  package.json
admin-ui/.elm-land/server/: index.html  main.js
admin-ui/.elm-land/src/: Main.elm  interop.js  interop.ts
admin-ui/.elm-land/src/Route/: Path.elm
admin-ui/review/: elm.json
admin-ui/src/: Api.elm  Shared.elm
admin-ui/src/Api/: Stats.elm  Tags.elm  Taxonomy.elm
admin-ui/src/Components/: PieChart.elm  TagsTable.elm
admin-ui/src/Pages/: Home_.elm
admin-ui/src/Pages/Tags/Search/: Keyword_.elm
admin-ui/src/Shared/: Model.elm  Msg.elm  Paging.elm  Route.elm
docker/: env.template  init.sh  postgres-conf.sql.template
docs/: conf.py  index.md
src/tagpack/: __init__.py  actorpack.py  actorpack_schema.py  cli.py  cmd_utils.py  concept_mapping.py  confidence.py  constants.py  graphsense.py  schema.py  tagpack.py  tagpack_schema.py  tagstore.py  taxonomy.py  utils.py  web.py
src/tagpack/conf/: actorpack_schema.yaml  ks_map.json.template  tagpack_schema.yaml
src/tagpack/db/: abuses.yaml  concept_relation_annotation.csv  concepts.yaml  confidence.csv  countries.csv  entities.yaml  tag_subject.csv  tag_types.csv  tagstore_schema.sql
src/tagstore/: web.bak
src/tagstore/algorithms/: tag_digest.py
src/tagstore/cli/: main.py
src/tagstore/config/: __init__.py
src/tagstore/db/: __init__.py  database.py  errors.py  init.sql  models.py  queries.py
src/tagstore/web/: dependencies.py  main.py
src/tagstore/web/routers/: base.py
src/tagstore/web/statics/: index.html
src/tagstore/web/statics/assets/: index-BH1Lba1T.js  index-DV3HDeRM.js  index.js
tagpack/: __init__.py  _version.py  actorpack.py  actorpack_schema.py  cassandra.py  cmd_utils.py  confidence.py  graphsense.py  tagpack.py  tagpack_schema.py  tagstore.py  taxonomy.py
tagpack/conf/: confidence.csv  env.template  ks_map.json.template  tagpack_schema.yaml
tagpack/db/: confidence.csv  tagpack_schema.cql  tagstore_schema.sql  tagstore_schema_monitored.sql
tests/: conftest.py  test_actorpack.py  test_actorpack_schema.py  test_constants.py  test_main.py  test_tagDigest.py  test_tagpack.py  test_tagpack_schema.py  test_tagstore.py  test_utils.py
tests/testfiles/: ex_addr_tagpack.yaml  ex_entity_tagpack.yaml  tagpack_fail_empty_label.yaml
tests/testfiles/TagPublic/: 0xdeadbeefdeadbeefdeadbeefdeadbeef_tags.json  1Archive1n2C579dMsAu3iC6tWzuQJz8dN_tags.json  exchange_tags.json
tests/testfiles/actors/: ex.actorpack.yaml  ex_actorpack.yaml
tests/testfiles/simple/: config.yaml  duplicate_tag.yaml  empty_tag_list.yaml  ex_addr_tagpack.yaml  multiple_tags_for_address.yaml  with_concepts.yaml
tests/testfiles/yaml_inclusion/: config.yaml  header.yaml
tests/testfiles/yaml_inclusion/2021/01/: 20210101.yaml  20210102.yaml
tests/testfiles/yaml_inclusion/2021/02/: 20210201.yaml
tests/testfiles/yaml_inclusion_missing_header/2021/02/: 20210201.yaml
tests/testfiles/yaml_inclusion_multiple/2021/01/: 20210101.yaml  header.yaml
tests/testfiles/yaml_inclusion_multiple/2021/01/special/: 20210106-special.yaml
tests/testfiles/yaml_inclusion_multiple/2021/02/: 20210201.yaml
